# obsidian-rag

./: .gitignore  Cargo.toml  app.py  config.yaml  mypy.ini  readme.md  requirements.txt
docs/: Product Requirements Document PRD.md
prompts/: black_list.json  querry_prompt.json  query_prompt.json
src/: main.rs  rag_core.py
src/embedding/: bm25.py  generate_enbeddings.py  ollama_embedding_wrapper.py  vector_db.py
src/load_vault/: load_vault.rs
src/models/: note_structure.rs
src/ngrams_search/: mod.rs  ngrams_search.rs
src/retrieve_context/: hybrid_retriever.py  retrieve_context.py
src/utils/: chat_logger.py  mod.rs  text_preprocess.rs  utils.py
