[package]
name = "obsidian-rag"
version = "0.2.0"
edition = "2024"

[dependencies]
console = { version = "0.16", features = ["std"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


rand = "0.10.0"
rayon = "1.8"

walkdir = "2.5.0"

uuid = { version = "1.22", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

regex = "1.12.3"
urlencoding = "2.0"


stopwords = "0.1.1"